<resources>
    <string name="app_name" translatable="false">PictureOfTheDay</string>
    <string name="photo_of_the_day_stub" translatable="false">Photo of the day</string>
    <string name="photo_of_the_mars_stub" translatable="false">Photo of the mars</string>
    <string name="photo_of_the_earth_stub" translatable="false">Photo of the earth</string>
    <string name="photo_of_the_system_stub" translatable="false">Photo of the system</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorite">Главный</string>
    <string name="settings">Настройки</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="searching_in_wiki">Поищите термин в википедии</string>
    <string name="app_bar_menu_send">Отправить</string>
    <string name="app_bar_menu_download">Скачать</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="chip_dby">Позавчера</string>
    <string name="db_yesterday">Позавчера</string>
    <string name="theme_one">Красная</string>
    <string name="theme_two">Оранжевая</string>
    <string name="theme_three">Голубая</string>
    <string name="change_theme">Выбор темы</string>
    <string name="chip_today">Сегодня</string>
    <string name="chip_yesterday">Вчера</string>
    <string name="earth">земля</string>
    <string name="system">солнце</string>
    <string name="mars">марс</string>
    <string name="setup">настройки</string>
    <string name="astronomy">кoсмос</string>
</resources>