<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_bottom_navigation_picture"
        android:icon="@drawable/ic_telescope"
        android:title="@string/astronomy" />
    <item
        android:id="@+id/action_bottom_navigation_earth"
        android:icon="@drawable/ic_earth"
        android:title="@string/earth" />
    <item
        android:id="@+id/action_bottom_navigation_db_mars"
        android:icon="@drawable/ic_mars"
        android:title="@string/mars" />
    <item
        android:id="@+id/action_bottom_navigation_system"
        android:icon="@drawable/ic_system"
        android:title="@string/system" />
    <item
        android:id="@+id/action_bottom_navigation_setup"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/setup"/>


</menu>