<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mars_motion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/fragment_motion_start_scene">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_mars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:tag="one"
            android:text="@string/today" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:tag="two"
            android:text="@string/yesterday" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:tag="three"
            android:text="@string/db_yesterday" />
    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/image_mars_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/photo_of_the_mars_stub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout_mars"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/ic_no_photo_vector"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />


    <TextView
        android:id="@+id/text_image_mars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Изображение марса с марсохода"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_mars_m"
        tools:layout_editor_absoluteX="370dp" />

</androidx.constraintlayout.motion.widget.MotionLayout>