<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainview_mars"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_mars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:tag="one"
            android:text="@string/today" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:tag="two"
            android:text="@string/yesterday" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:tag="three"
            android:text="@string/db_yesterday" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/mars_image_m"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutDescription="@xml/motion_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout_mars">


        <com.example.pictureoftheday.utils.EquilateralImageView
            android:id="@+id/image_mars"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/photo_of_the_mars_stub"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/mars_image_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mars_image_m"
            app:srcCompat="@drawable/ic_no_photo_vector" />

        <TextView
            android:id="@+id/img_src"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/image_mars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

    </androidx.constraintlayout.motion.widget.MotionLayout>


</androidx.constraintlayout.widget.ConstraintLayout>