<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Выбор темы приложения"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center">
    </TextView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:tag="one"
            android:text="Красная" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:tag="two"
            android:text="Оранжевая" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:tag="three"
            android:text="Голубая" />
    </com.google.android.material.tabs.TabLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gray"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/button_theme_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/theme_one">

        </com.google.android.material.radiobutton.MaterialRadioButton>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/button_theme_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/theme_two">

        </com.google.android.material.radiobutton.MaterialRadioButton>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/button_theme_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/theme_three">

        </com.google.android.material.radiobutton.MaterialRadioButton>
    </RadioGroup>


 />


</LinearLayout>